--- a/estilo/style.css
+++ b/estilo/style.css
@@ -27,11 +27,10 @@ menu {
 
 menu > ul {
     list-style-type: none;
-    display: flex;
 }
 
 menu > ul > li {
-    margin-right: 5px;
+    width: 10vw;
 }
 
 menu > ul > li > a:hover {
@@ -48,7 +47,7 @@ menu > ul > li > a {
     padding: 10px;
     text-decoration: none;
     background-color: rgb(87, 86, 86);
-    width: 10vw;
+    width: 97vw;
     color: white;
     text-align: center;
 }
@@ -63,7 +62,7 @@ main > article > h2 {
 }
 
 article {
-    width: 80vw;
+    width: 90vw;
     margin: auto;
     background-color: white;
     border-radius: 10px;
@@ -74,7 +73,7 @@ article > p {
     margin-bottom: 5px;
     text-indent: 10px;
     text-align: justify;
-    font-size: 20px;
+    font-size: 1.7em;
     line-height: 1.3;
 }
 
@@ -84,11 +83,10 @@ article > p {
 }
 
 .fotoney > .iframm {
-    width: 800px;
-    height: 400px;
+    width: 500px;
+    height: 300px;
     margin-top: 25px;
     margin-bottom: 30px;
-    object-fit: cover;
 }
 
 #neymarbio {
