--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Boldonse&display=swap');
 * {
     font-family: Arial, Helvetica, sans-serif;    
     padding: 0;
@@ -19,10 +19,12 @@ header {
 header > h1 {
     padding: 30px;
     text-align: center;
+    font-family: "Boldonse", system-ui;
+    font-size: 1.5em;
 }
 
 menu {
-    display: block;
+    display: none;
 }
 
 menu > ul {
@@ -52,13 +54,28 @@ menu > ul > li > a {
     text-align: center;
 }
 
-main {
+#burguer {
+    background-color: rgb(24, 22, 22);
+    display: block;
+    color: white;
+    text-align: center;
     padding: 10px;
+}
+
+#burguer:hover {
+   background-color: white;
+   color: black;
+   cursor: pointer;
+}
+
+main {
+    padding: 20px;
 }
 
 main > article > h2 {
     text-align: center;
     padding: 15px;
+    font-family: "Boldonse", system-ui;
 }
 
 article {
@@ -101,4 +118,86 @@ article > p {
 
 #neymarbio::after {
     content: '🔗';
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+    header > h1 {
+        font-size: 1.3em;
+        padding: 20px;
+    }
+
+    header > i {
+        display: none;
+    }
+
+    article {
+        width: 95vw;
+    }
+
+    article > p {
+        font-size: 1.2em
+    }
+
+    menu > ul {
+        display: flex;
+        justify-content: center;
+    }
+
+    menu > ul > li {
+        margin: 0px 15px;
+    }
+
+    menu > ul > li > a {
+        width: 10vw;
+
+    }
+    
+}
+
+@media screen and (min-width: 769px) {
+    header > h1 {
+        font-size: 1.2em;
+    }
+
+    header > i {
+        display: none;
+    }
+
+    main {
+        padding: 0px;
+    }
+    
+    article {
+        width: 100vw;
+        border-radius: 0;
+    }
+
+    article > h2 {
+        font-size: 1.1em;
+    }
+
+    article > p {
+        font-size: 1.2em;
+        padding: 5px;
+    }
+
+    menu > ul {
+        display: flex;
+        justify-content: left;
+    }
+
+    menu > ul > li {
+        margin: 0px 15px;
+    }
+
+    menu > ul > li > a {
+        width: 10vw;
+    }
+
+    .fotoney > .iframm {
+        width: 750px;
+        height: 400px;
+        margin-top: 25px;
+        margin-bottom: 30px;
+    }
 }
