--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Boldonse&display=swap');
+
+
 * {
     font-family: Arial, Helvetica, sans-serif;    
     padding: 0;
@@ -23,15 +25,11 @@ header > h1 {
     font-size: 1.5em;
 }
 
-menu {
-    display: none;
-}
-
-menu > ul {
+#itens > ul {
     list-style-type: none;
 }
 
-menu > ul > li {
+#itens > ul > li {
     width: 10vw;
 }
 
@@ -39,7 +37,7 @@ menu > ul > li > a:hover {
     background-color: black;
     text-decoration: underline;
     color: rgb(170, 165, 165);
-    border-radius: 7px;
+    border-radius: 15px 5px;
     transform: translate(0px,-5px);
     transition: .3s;
 }
@@ -52,6 +50,8 @@ menu > ul > li > a {
     width: 97vw;
     color: white;
     text-align: center;
+    border: .5px solid rgba(0, 0, 0, 0.452);
+    border-radius: 5px 15px;
 }
 
 #burguer {
@@ -118,86 +118,4 @@ article > p {
 
 #neymarbio::after {
     content: '🔗';
-}
-
-@media screen and (min-width: 577px) and (max-width: 768px) {
-    header > h1 {
-        font-size: 1.3em;
-        padding: 20px;
-    }
-
-    header > i {
-        display: none;
-    }
-
-    article {
-        width: 95vw;
-    }
-
-    article > p {
-        font-size: 1.2em
-    }
-
-    menu > ul {
-        display: flex;
-        justify-content: center;
-    }
-
-    menu > ul > li {
-        margin: 0px 15px;
-    }
-
-    menu > ul > li > a {
-        width: 10vw;
-
-    }
-    
-}
-
-@media screen and (min-width: 769px) {
-    header > h1 {
-        font-size: 1.2em;
-    }
-
-    header > i {
-        display: none;
-    }
-
-    main {
-        padding: 0px;
-    }
-    
-    article {
-        width: 100vw;
-        border-radius: 0;
-    }
-
-    article > h2 {
-        font-size: 1.1em;
-    }
-
-    article > p {
-        font-size: 1.2em;
-        padding: 5px;
-    }
-
-    menu > ul {
-        display: flex;
-        justify-content: left;
-    }
-
-    menu > ul > li {
-        margin: 0px 15px;
-    }
-
-    menu > ul > li > a {
-        width: 10vw;
-    }
-
-    .fotoney > .iframm {
-        width: 750px;
-        height: 400px;
-        margin-top: 25px;
-        margin-bottom: 30px;
-    }
 }
